@@ -325,6 +325,7 @@ ul.stories .actions {
 
 #content a.status,
 #content a.quickedit,
+#content a.quick-booking,
 #content a.story-quickview {
     background: transparent url('pencil.png') no-repeat;
     border: 0 none !important;
@@ -346,6 +347,10 @@ ul.stories .actions {
     background-image: url('magnifier.png');
 }
 
+#content a.quick-booking {
+    background-image: url('booking.png');
+}
+
 
 #content a.status {
     background-image: url('tag_red.png');
@@ -353,6 +358,7 @@ ul.stories .actions {
 
 #content a.status span,
 #content a.story-quickview span,
+#content a.quick-booking span,
 #content a.quickedit span {
     padding: 20px;
 }
@@ -534,7 +540,7 @@ table.stories tbody tr td.info {
 }
 
 table.stories tbody tr td.actions {
-    width: 65px;
+    width: 80px;
 }
 
 table.stories tbody tr td.quick-booking {
